deploy/nick-circle-1-prod/nick-circle-1-api-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nick-circle-1-api
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "nick-circle-1-api-prod.gcp-dev.gigsternetwork.com"
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.allow-http: "true"
    certmanager.k8s.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - "nick-circle-1-api-prod.gcp-dev.gigsternetwork.com"
    secretName: nick-circle-1-api-tls
  rules:
  - host: "nick-circle-1-api-prod.gcp-dev.gigsternetwork.com"
    http:
      paths:
      - backend:
          serviceName: nick-circle-1-api
          servicePort: 80
